# islamic-application

./: flutter_launcher_icons.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
assets/animations/: File downloaded.json
assets/jsons/: app_strings.json  duaas.json  hadith.json  reciters.json  surahs.json  tafsir_edition.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: bottom_sheet_widget.dart  contact_us_list_tile_widget.dart  contact_us_tab_view.dart  list_tile_widget.dart  main.dart  noor_app.dart  prayer_times_page.dart  splash_screen.dart  test_widgets.dart  to_do.dart
lib/core/adapters/: type_adapter_for_timings.dart
lib/core/adaptive/: orentation_layout.dart
lib/core/adaptive_widgets/: get_adaptive_loading_widget.dart
lib/core/constants/: api_constants.dart  apiconstants.dart  app_durations.dart  app_strings.dart  cache_constants.dart  constants_values.dart  data_base_constants.dart  font_familys.dart  routes_constants.dart  tasks_constants.dart  view_constants.dart
lib/core/controllers/: location_functionality_controller.dart
lib/core/errors/: exceptions.dart  failures.dart
lib/core/extentions/: controllers_extention.dart
lib/core/utils/: enums.dart  (+5 more)
lib/features/: location_permission_page.dart  splash_screen.dart
macos/Flutter/: GeneratedPluginRegistrant.swift
web/: index.html
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: CMakeLists.txt  main.cpp
(+564 files in other folders)
